--- a/src/MBD.BankAccounts.API/appsettings.json
+++ b/src/MBD.BankAccounts.API/appsettings.json
@@ -14,5 +14,6 @@
     "Secret": "",
     "Issuer": "MdbIdentityApi",
     "Audience": "MdbClient"
-  }
+  },
+  "DatabaseName": "mbd-bankaccount"
 }
