--- a/src/MBD.BankAccounts.Infrastructure/MBD.BankAccounts.Infrastructure.csproj
+++ b/src/MBD.BankAccounts.Infrastructure/MBD.BankAccounts.Infrastructure.csproj
@@ -3,11 +3,12 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="9.0.0" />
-    <PackageReference Include="MeuBolsoDigital.Core" Version="1.0.2" />
-    <PackageReference Include="Ishizava.MongoDB.Context" Version="1.0.5" />
+    <PackageReference Include="MediatR" Version="9.0.0"/>
+    <PackageReference Include="MeuBolsoDigital.Core" Version="1.0.2"/>
+    <PackageReference Include="Ishizava.MongoDB.Context" Version="1.0.5"/>
+    <PackageReference Include="MeuBolsoDigital.CrossCutting" Version="1.0.0"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MBD.BankAccounts.Domain\MBD.BankAccounts.Domain.csproj" />
+    <ProjectReference Include="..\MBD.BankAccounts.Domain\MBD.BankAccounts.Domain.csproj"/>
   </ItemGroup>
 </Project>
