--- a/src/MBD.BankAccounts.UnitTests/MBD.BankAccounts.UnitTests.csproj
+++ b/src/MBD.BankAccounts.UnitTests/MBD.BankAccounts.UnitTests.csproj
@@ -20,9 +20,11 @@
     <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
     <PackageReference Include="MeuBolsoDigital.Core" Version="1.0.2"/>
     <PackageReference Include="MeuBolsoDigital.Application.Utils" Version="1.0.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MBD.BankAccounts.Domain\MBD.BankAccounts.Domain.csproj"/>
     <ProjectReference Include="..\MBD.BankAccounts.Application\MBD.BankAccounts.Application.csproj"/>
+    <ProjectReference Include="..\MBD.BankAccounts.API\MBD.BankAccounts.API.csproj"/>
   </ItemGroup>
 </Project>
